sql file added to resources and DataSourceConfig class made to map the database

--- a/exam.spring/build.gradle
+++ b/exam.spring/build.gradle
@@ -11,7 +11,7 @@ buildscript {
 }
 
 apply plugin: 'java'
-apply plugin: 'eclipse'
+
 apply plugin: 'org.springframework.boot'
 
 group = 'com.greenfox'
@@ -28,4 +28,6 @@ dependencies {
 	compile('org.springframework.boot:spring-boot-starter-web')
 	runtime('mysql:mysql-connector-java')
 	testCompile('org.springframework.boot:spring-boot-starter-test')
+	compile("org.springframework:spring-jdbc")
+	compile("com.h2database:h2:1.4.191")
 }
