--- a/exam.spring/build.gradle
+++ b/exam.spring/build.gradle
@@ -30,4 +30,6 @@ dependencies {
 	testCompile('org.springframework.boot:spring-boot-starter-test')
 	compile("org.springframework:spring-jdbc")
 	compile("com.h2database:h2:1.4.191")
+	compile('org.springframework.boot:spring-boot-starter-data-jpa')
+	runtime('org.springframework.boot:spring-boot-devtools')
 }
