--- a/exam.spring/build.gradle
+++ b/exam.spring/build.gradle
@@ -29,7 +29,10 @@ dependencies {
 	runtime('mysql:mysql-connector-java')
 	testCompile('org.springframework.boot:spring-boot-starter-test')
 	compile("org.springframework:spring-jdbc")
-	compile("com.h2database:h2:1.4.191")
+	compile("com.h2database:h2")
 	compile('org.springframework.boot:spring-boot-starter-data-jpa')
 	runtime('org.springframework.boot:spring-boot-devtools')
+	compile("org.springframework.boot:spring-boot-starter-actuator")
+
 }
+
